@@ -1,5 +1,8 @@
 [b]Version 0.8.0[/b]:
 
+(2012-03-29)
+ * (Youtube) Recognize short urls.
+
 (2012-03-28)
  * Display chapter names in the chapter menu.
 
